syntax = "proto3";
package term.v1;

service TermService {
  rpc List (ListRequest) returns (ListResponse);
  rpc Get (GetRequest) returns (Term);
  rpc Create (CreateRequest) returns (Term);
  rpc Update (UpdateRequest) returns (Term);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message Term {
  int32 id = 1;
  string name = 2;
  string definition = 3;
}

message ListRequest {}
message ListResponse { repeated Term items = 1; }

message GetRequest { int32 id = 1; }

message CreateRequest {
  string name = 1;
  string definition = 2;
}

message UpdateRequest {
  int32 id = 1;
  string name = 2;
  string definition = 3;
}

message DeleteRequest { int32 id = 1; }
message DeleteResponse { bool ok = 1; }